--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svelte-element-portal",
   "version": "0.0.1",
-  "description": "Make an element escape its parent overflow by rendering it over an ancestor element in the DOM :v:",
+  "description": "Escape parent overflow by rendering an element over its ancestor :v:",
   "private": false,
   "type": "module",
   "main": "lib/svelte-element-portal.js",
