--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,7 +36,7 @@ jobs:
       - run: npm ci
       - run: npm run build
       - run: npm run test
-      - uses: upload-artifact@v1
+      - uses: actions/upload-artifact@v3
         with:
           name: lib
           path: lib
@@ -49,7 +49,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "14.x"
-      - uses: download-artifact@v1
+      - uses: actions/download-artifact@v3
         with:
           name: lib
           path: lib
