add files, keywords and bump version

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,7 +35,8 @@ jobs:
           key: ${{ runner.os }}-${{ matrix.node-version }}-modules-${{ hashFiles('**/package-lock.json') }}
       - run: npm ci
       - run: npm run build
-      - run: npm run test
+      - name: Test ✅
+        run: npm run test
       - uses: actions/upload-artifact@v3
         with:
           name: lib
