--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "svelte-element-portal",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Escape parent overflow by rendering an element over its ancestor :v:",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nwaughachukwuma/svelte-element-portal.git"
+  },
   "private": false,
   "type": "module",
   "main": "lib/svelte-element-portal.js",
